force-app/main/default/objects/sf_devops__Back_Sync__c/sf_devops__Back_Sync__c.object-meta.xml
<CustomObject>
    <description>Store Back Sync operations.</description>
    <label>Back Sync</label>
    <nameField>
        <label>Back Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Back Synchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>