force-app/main/default/objects/sf_devops__Back_Sync__c/fields/sf_devops__Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Deployment_Result__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The results of our deployment into the dev environment</description>
    <label>Deployment Result</label>
    <referenceTo>sf_devops__Deployment_Result__c</referenceTo>
    <relationshipLabel>Back Syncs</relationshipLabel>
    <relationshipName>Back_Syncs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>