force-app/main/default/objects/sf_devops__Back_Sync__c/fields/sf_devops__Operation_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Operation_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation Result</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Back Sync</relationshipLabel>
    <relationshipName>Back_Syncs</relationshipName>
    <type>Lookup</type>
</CustomField>